[project]
name = "ucp-framework"
version = "0.0.1"
authors = [
  { name="Kevin Kamto", email="kamtokevin@gmail.com" },
]
description = "The universal communication protocol combines the benefits of mqtt, with a bi-directional communication framework like WebSockets"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/user2745/ucp/README.md"
Issues = "https://github.com/user2745/ucp/issues"